--- a/public/stats.html
+++ b/public/stats.html
@@ -502,6 +502,69 @@
             return true;
         }
 
+        function getGameById(gameId) {
+            return window.gamesData ? window.gamesData[gameId] : null;
+        }
+
+        function getGameRoundsArray(game) {
+            if (!game) return [];
+            const rounds = game.rounds || [];
+            return Array.isArray(rounds) ? rounds : Object.values(rounds);
+        }
+
+        function getPlayerTeamInfo(playerId, game) {
+            if (!game || !game.teams) return { teamId: null, teamIndex: null };
+            const team1Players = game.teams.team1 && game.teams.team1.players ? Object.keys(game.teams.team1.players) : [];
+            const team2Players = game.teams.team2 && game.teams.team2.players ? Object.keys(game.teams.team2.players) : [];
+            if (team1Players.includes(playerId)) {
+                return { teamId: game.teams.team1.id, teamIndex: 1 };
+            }
+            if (team2Players.includes(playerId)) {
+                return { teamId: game.teams.team2.id, teamIndex: 2 };
+            }
+            return { teamId: null, teamIndex: null };
+        }
+
+        function computeAttributionForEntry(playerId, entry) {
+            const game = getGameById(entry.gameId);
+            const rounds = entry.rounds || [];
+            const gameRounds = getGameRoundsArray(game);
+            const { teamId, teamIndex } = getPlayerTeamInfo(playerId, game);
+            let pointsTotal = 0;
+            let scoringRounds = 0;
+            let tossedRounds = 0;
+
+            rounds.forEach(r => {
+                const rn = r.roundNumber || 0;
+                const gr = gameRounds.find(grr => (grr?.roundNumber || 0) === rn) || gameRounds[rn - 1] || null;
+                let iTossed = false;
+                let teamScoredThisRound = false;
+                let teamPoints = 0;
+
+                if (gr) {
+                    if (teamIndex === 1) iTossed = (gr.team1TosserId === playerId);
+                    else if (teamIndex === 2) iTossed = (gr.team2TosserId === playerId);
+                    teamScoredThisRound = (teamId && gr.scoringTeam === teamId) || false;
+                    teamPoints = Number(gr.pointsScored || 0);
+                }
+
+                if (iTossed) tossedRounds++;
+
+                const perPlayer = Number(r.score || 0);
+                if (perPlayer > 0) {
+                    pointsTotal += perPlayer;
+                    scoringRounds += 1;
+                } else if (iTossed && teamScoredThisRound && teamPoints > 0) {
+                    // Fallback attribution to tosser when per-player score not recorded
+                    pointsTotal += teamPoints;
+                    scoringRounds += 1;
+                }
+            });
+
+            const tossedInGame = tossedRounds > 0;
+            return { pointsTotal, scoringRounds, tossedRounds, tossedInGame };
+        }
+
         function getPlayerRounds(playerId, gameId) {
             const playerRoundsRoot = window.playerRoundsData || {};
             // player-rounds path is nested by playerId then gameId
@@ -544,7 +607,7 @@
         function calculateScoringRounds(playerId) {
             return getPlayerGameEntries(playerId)
                 .filter(e => e.meta && e.meta.isValid)
-                .reduce((total, e) => total + e.rounds.filter(r => (r?.score || 0) > 0).length, 0);
+                .reduce((total, e) => total + computeAttributionForEntry(playerId, e).scoringRounds, 0);
         }
 
         function calculateAveragePointsPerRound(playerId) {
@@ -553,25 +616,41 @@
             getPlayerGameEntries(playerId)
                 .filter(e => e.meta && e.meta.isValid)
                 .forEach(e => {
-                    totalPoints += e.rounds.reduce((sum, r) => sum + (r?.score || 0), 0);
-                    totalRounds += e.rounds.filter(r => r?.roundNumber).length;
+                    const attr = computeAttributionForEntry(playerId, e);
+                    totalPoints += attr.pointsTotal;
+                    totalRounds += attr.tossedRounds;
                 });
             return totalRounds > 0 ? totalPoints / totalRounds : 0;
         }
 
         function calculatePointsScored(playerId, dateRange, gameType) {
-            // Sum of per-round scores for this player across filtered games
-            let total = 0;
-            getPlayerGameEntries(playerId)
+            // Sum of per-round points using per-player score, with fallback attribution when needed
+            return getPlayerGameEntries(playerId)
                 .filter(e => entryPassesFilters(e, dateRange, gameType))
-                .forEach(e => { total += e.rounds.reduce((sum, r) => sum + (r?.score || 0), 0); });
-            return total;
+                .reduce((sum, e) => sum + computeAttributionForEntry(playerId, e).pointsTotal, 0);
         }
 
         function calculateBestRound(playerId) {
             return getPlayerGameEntries(playerId)
                 .filter(e => e.meta && e.meta.isValid)
-                .reduce((best, e) => Math.max(best, Math.max(0, ...e.rounds.map(r => r?.score || 0))), 0);
+                .reduce((best, e) => {
+                    const pointsThisGame = computeAttributionForEntry(playerId, e);
+                    // derive best attributed round from raw rounds + game linkage
+                    const game = getGameById(e.gameId);
+                    const gameRounds = getGameRoundsArray(game);
+                    const { teamId, teamIndex } = getPlayerTeamInfo(playerId, game);
+                    let bestRound = 0;
+                    e.rounds.forEach(r => {
+                        const rn = r.roundNumber || 0;
+                        const gr = gameRounds.find(grr => (grr?.roundNumber || 0) === rn) || gameRounds[rn - 1] || null;
+                        const per = Number(r.score || 0);
+                        if (per > 0) bestRound = Math.max(bestRound, per);
+                        else if (gr && teamId && ((teamIndex === 1 && gr.team1TosserId === playerId) || (teamIndex === 2 && gr.team2TosserId === playerId)) && gr.scoringTeam === teamId) {
+                            bestRound = Math.max(bestRound, Number(gr.pointsScored || 0));
+                        }
+                    });
+                    return Math.max(best, bestRound);
+                }, 0);
         }
 
         function calculateHammerPercentage(playerId) {
@@ -613,11 +692,11 @@
         }
 
         function calculateCarryPercentage(playerId) {
-            // Average of per-game shares: myPointsThisGame / teamScore
+            // Average of per-game shares: myAttributedPointsThisGame / teamScore
             const shares = getPlayerGameEntries(playerId)
                 .filter(e => e.meta && e.meta.isValid && (e.meta.teamScore || 0) > 0)
                 .map(e => {
-                    const myPts = e.rounds.reduce((sum, r) => sum + (r?.score || 0), 0);
+                    const myPts = computeAttributionForEntry(playerId, e).pointsTotal;
                     return myPts / e.meta.teamScore;
                 });
             if (shares.length === 0) return 0;
