--- a/public/users.html
+++ b/public/users.html
@@ -14,8 +14,11 @@
     .layout { display:grid; grid-template-columns: 360px 1fr; gap: 1rem; }
     .panel { background:#fff; border-radius:12px; box-shadow:0 1px 3px rgba(0,0,0,0.1); padding:1rem; }
     .game-list { list-style:none; padding:0; margin:0; max-height:70vh; overflow:auto; }
-    .game-item { padding:0.75rem; border-bottom:1px solid #eee; cursor:pointer; }
-    .game-item:hover, .game-item.active { background:#f8f9fa; }
+    .game-item { padding:0.75rem 0.9rem; border-bottom:1px solid #eee; cursor:pointer; display:flex; flex-direction:column; gap:2px; }
+    .game-item:hover, .game-item.active { background:#f0f6ff; }
+    .line1 { font-weight:600; color:#1a1a1a; }
+    .line2 { font-size:0.9rem; color:#666; display:flex; gap:8px; align-items:center; }
+    .badge { background:#eef2f7; color:#40576b; font-size:0.75rem; padding:2px 6px; border-radius:999px; }
     .round { padding:0.5rem 0; border-bottom:1px dashed #eee; }
     .stats-grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(160px,1fr)); gap:0.75rem; }
     .stat-card { background:#f8f9fa; border-radius:8px; padding:0.75rem; text-align:center; }
@@ -72,6 +75,25 @@
       if (t2.includes(pid)) return { teamId: game.teams.team2.id, idx:2 };
       return { teamId:null, idx:null };
     }
+    function teamNames(game, key){
+      const team = game?.teams?.[key]; if(!team) return '';
+      const ids = Object.keys(team.players||{});
+      if (ids.length>0){
+        const names = ids.map(id=> (players[id]?.name || id.substring(0,6))).filter(Boolean);
+        return names.join(' & ');
+      }
+      return team.name || '';
+    }
+    function prettyMatchup(pid, game){
+      const { teamId, idx } = teamInfo(pid, game);
+      const mineKey = idx===1? 'team1':'team2';
+      const oppKey  = idx===1? 'team2':'team1';
+      const myNames  = teamNames(game, mineKey);
+      const oppNames = teamNames(game, oppKey);
+      const myScore  = game?.teams?.[mineKey]?.score ?? '';
+      const oppScore = game?.teams?.[oppKey]?.score ?? '';
+      return { title: `${myNames} vs ${oppNames}`, score: `${myScore}-${oppScore}` };
+    }
     function hammerSeries(game){
       const rs = roundsArr(game); const t1 = game?.teams?.team1?.id; const t2 = game?.teams?.team2?.id; if(!t1||!t2) return [];
       const sim = (h)=>{ let cur=h, out=[]; for(const r of rs){ const pts=Number(r?.pointsScored||0), s=r?.scoringTeam||null; if(pts===0 && s && s!==cur) return null; out.push(cur); cur = (pts>0&&s)? s : (cur===t1?t2:t1);} return out; };
@@ -125,8 +147,9 @@
       for(const e of filtered){
         const g=games[e.gameId]; const when = g?.date? new Date(g.date*1000).toLocaleString():'';
         const li=document.createElement('li'); li.className='game-item'; li.dataset.gid=e.gameId;
-        li.textContent = `${when} · ${e.meta.teamName} ${e.meta.teamScore}-${e.meta.opponentScore}`;
-        li.onclick=()=> showGame(pid, e);
+        const pm = prettyMatchup(pid, g);
+        li.innerHTML = `<div class="line1">${pm.title}</div><div class="line2"><span class="badge">${pm.score}</span><span>${when}</span></div>`;
+        li.onclick=()=> { document.querySelectorAll('.game-item').forEach(n=>n.classList.remove('active')); li.classList.add('active'); showGame(pid, e); };
         list.appendChild(li);
       }
       if(filtered[0]) showGame(pid, filtered[0]);
@@ -134,7 +157,8 @@
 
     function showGame(pid, entry){
       const g = games[entry.gameId]; const rs = roundsArr(g);
-      el('gameHeader').textContent = `${entry.meta.teamName} vs ${entry.meta.opponents?.length||''} · ${new Date((g?.date||0)*1000).toLocaleString()}`;
+      const pm = prettyMatchup(pid, g);
+      el('gameHeader').textContent = `${pm.title} · ${pm.score} · ${new Date((g?.date||0)*1000).toLocaleString()}`;
       const roundsDiv = el('rounds'); roundsDiv.innerHTML='';
       // join by roundNumber
       for(const r of entry.rounds){
