--- a/public/marketing.html
+++ b/public/marketing.html
@@ -248,6 +248,7 @@
 
         <div class="footer">
             <a href="index.html">Home</a>
+            <a href="stats.html">Player Stats</a>
             <a href="privacypolicy.html">Privacy Policy</a>
             <a href="termsandconditions.html">Terms & Conditions</a>
             <a href="age-rating.html">Age Rating</a>
