Use team players map values' name when available; fallback to /players name; final fallback to id slice

--- a/public/users.html
+++ b/public/users.html
@@ -77,9 +77,14 @@
     }
     function teamNames(game, key){
       const team = game?.teams?.[key]; if(!team) return '';
-      const ids = Object.keys(team.players||{});
-      if (ids.length>0){
-        const names = ids.map(id=> (players[id]?.name || id.substring(0,6))).filter(Boolean);
+      const pMap = team.players || {};
+      const entries = Object.entries(pMap);
+      if (entries.length > 0){
+        const names = entries.map(([pid, val]) => {
+          if (val && typeof val === 'object' && val.name) return val.name;
+          const n = players[pid]?.name;
+          return n || pid.substring(0,6);
+        }).filter(Boolean);
         return names.join(' & ');
       }
       return team.name || '';
